deploy: f3f2ce08b7ab08563eaca6a5fcd00e68d0a23a1a

--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -857,7 +857,7 @@ The following math glyphs have a different width, though:</p>
 <p>Width = 406:
 uni002B</p>
 <p>Width = 690:
-uni003C, uni003E</p>
+uni003E, uni003C</p>
 <p>Width = 394:
 uni003D</p>
 <p>Width = 575:
@@ -1280,12 +1280,12 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
-<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: coptic, math, cherokee, tifinagh</li>
+<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: cherokee, tifinagh, math, coptic</li>
 <li>U+0306 COMBINING BREVE: try adding one of: old-permic, tifinagh</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: math, tifinagh, coptic, malayalam, duployan, syriac, canadian-aboriginal, hebrew, old-permic, todhri, tai-le</li>
-<li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: osage, cherokee</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: tai-le, tifinagh, todhri, syriac, old-permic, hebrew, canadian-aboriginal, duployan, malayalam, math, coptic</li>
+<li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: cherokee, osage</li>
 <li>U+030F COMBINING DOUBLE GRAVE ACCENT: not included in any glyphset definition</li>
-<li>U+0311 COMBINING INVERTED BREVE: try adding one of: coptic, todhri</li>
+<li>U+0311 COMBINING INVERTED BREVE: try adding one of: todhri, coptic</li>
 <li>U+0327 COMBINING CEDILLA: try adding math</li>
 <li>U+033E COMBINING VERTICAL TILDE: not included in any glyphset definition</li>
 <li>U+034F COMBINING GRAPHEME JOINER: not included in any glyphset definition</li>
@@ -1301,13 +1301,13 @@ definitions.</p>
 <li>U+2006 SIX-PER-EM SPACE: try adding symbols2</li>
 <li>U+2008 PUNCTUATION SPACE: try adding symbols2</li>
 <li>U+200A HAIR SPACE: try adding symbols2</li>
-<li>U+200C ZERO WIDTH NON-JOINER: try adding one of: tibetan, kharoshthi, takri, tifinagh, devanagari, nko, malayalam, duployan, pahawh-hmong, syriac, lao, mahajani, oriya, siddham, lepcha, tai-viet, tamil, telugu, warang-citi, khmer, rejang, hatran, bhaiksuki, phags-pa, new-tai-lue, avestan, javanese, mongolian, balinese, hanunoo, chakma, manichaean, tagbanwa, sharada, hanifi-rohingya, arabic, dogra, kannada, buhid, psalter-pahlavi, sundanese, limbu, meetei-mayek, saurashtra, tai-tham, khudawadi, tirhuta, buginese, kaithi, brahmi, yi, cham, masaram-gondi, modi, khojki, mandaic, sinhala, sogdian, syloti-nagri, tagalog, bengali, thaana, kayah-li, zanabazar-square, gurmukhi, batak, myanmar, grantha, thai, hebrew, gujarati, newa, gunjala-gondi, tai-le</li>
-<li>U+200D ZERO WIDTH JOINER: try adding one of: tibetan, kharoshthi, old-hungarian, takri, tifinagh, devanagari, nko, malayalam, duployan, pahawh-hmong, syriac, lao, mahajani, oriya, siddham, lepcha, tai-viet, tamil, telugu, warang-citi, khmer, rejang, phags-pa, bhaiksuki, new-tai-lue, avestan, javanese, mongolian, balinese, hanunoo, chakma, manichaean, tagbanwa, sharada, hanifi-rohingya, arabic, dogra, kannada, buhid, psalter-pahlavi, sundanese, limbu, meetei-mayek, saurashtra, tai-tham, khudawadi, tirhuta, buginese, kaithi, brahmi, yi, cham, masaram-gondi, modi, khojki, mandaic, sinhala, sogdian, syloti-nagri, tagalog, bengali, thaana, kayah-li, zanabazar-square, gurmukhi, batak, myanmar, grantha, thai, hebrew, gujarati, newa, gunjala-gondi, tai-le</li>
-<li>U+200E LEFT-TO-RIGHT MARK: try adding one of: thaana, phags-pa, nko, syriac, hebrew, arabic</li>
-<li>U+200F RIGHT-TO-LEFT MARK: try adding one of: thaana, phags-pa, nko, syriac, hebrew</li>
-<li>U+2011 NON-BREAKING HYPHEN: try adding one of: yi, syloti-nagri, arabic</li>
+<li>U+200C ZERO WIDTH NON-JOINER: try adding one of: manichaean, sundanese, grantha, yi, mongolian, telugu, pahawh-hmong, kharoshthi, hanunoo, masaram-gondi, buhid, nko, rejang, thaana, duployan, tagbanwa, cham, khmer, tibetan, tai-viet, arabic, oriya, bengali, meetei-mayek, zanabazar-square, gujarati, takri, thai, brahmi, chakma, hatran, limbu, malayalam, avestan, khudawadi, syriac, tagalog, myanmar, hanifi-rohingya, khojki, sogdian, warang-citi, newa, kannada, gunjala-gondi, lao, hebrew, buginese, sinhala, batak, kaithi, tirhuta, balinese, mahajani, tai-le, devanagari, mandaic, tifinagh, phags-pa, syloti-nagri, gurmukhi, sharada, tai-tham, dogra, saurashtra, javanese, lepcha, psalter-pahlavi, modi, new-tai-lue, bhaiksuki, tamil, siddham, kayah-li</li>
+<li>U+200D ZERO WIDTH JOINER: try adding one of: manichaean, sundanese, grantha, yi, mongolian, telugu, pahawh-hmong, kharoshthi, hanunoo, masaram-gondi, buhid, nko, rejang, thaana, duployan, tagbanwa, cham, khmer, tibetan, tai-viet, arabic, oriya, bengali, meetei-mayek, zanabazar-square, gujarati, takri, thai, brahmi, chakma, limbu, malayalam, syriac, avestan, khudawadi, tagalog, warang-citi, myanmar, hanifi-rohingya, khojki, sogdian, newa, kannada, gunjala-gondi, lao, hebrew, buginese, sinhala, batak, kaithi, tirhuta, old-hungarian, balinese, mahajani, tai-le, devanagari, mandaic, tifinagh, phags-pa, syloti-nagri, gurmukhi, sharada, tai-tham, dogra, saurashtra, javanese, lepcha, psalter-pahlavi, modi, new-tai-lue, bhaiksuki, tamil, siddham, kayah-li</li>
+<li>U+200E LEFT-TO-RIGHT MARK: try adding one of: phags-pa, arabic, hebrew, nko, thaana, syriac</li>
+<li>U+200F RIGHT-TO-LEFT MARK: try adding one of: phags-pa, hebrew, nko, thaana, syriac</li>
+<li>U+2011 NON-BREAKING HYPHEN: try adding one of: arabic, yi, syloti-nagri</li>
 <li>U+2027 HYPHENATION POINT: not included in any glyphset definition</li>
-<li>U+202F NARROW NO-BREAK SPACE: try adding one of: phags-pa, mongolian, yi</li>
+<li>U+202F NARROW NO-BREAK SPACE: try adding one of: yi, phags-pa, mongolian</li>
 <li>U+203B REFERENCE MARK: not included in any glyphset definition</li>
 <li>U+2052 COMMERCIAL MINUS SIGN: not included in any glyphset definition</li>
 <li>U+2053 SWUNG DASH: try adding coptic</li>
@@ -1315,17 +1315,17 @@ definitions.</p>
 <li>U+2058 FOUR DOT PUNCTUATION: try adding coptic</li>
 <li>U+2059 FIVE DOT PUNCTUATION: try adding coptic</li>
 <li>U+205C DOTTED CROSS: not included in any glyphset definition</li>
-<li>U+205D TRICOLON: try adding one of: carian, old-hungarian, meroitic-hieroglyphs, meroitic</li>
+<li>U+205D TRICOLON: try adding one of: old-hungarian, meroitic, carian, meroitic-hieroglyphs</li>
 <li>U+205E VERTICAL FOUR DOTS: try adding old-hungarian</li>
 <li>U+20DD COMBINING ENCLOSING CIRCLE: try adding symbols</li>
 <li>U+2213 MINUS-OR-PLUS SIGN: try adding math</li>
 <li>U+2214 DOT PLUS: try adding math</li>
-<li>U+2219 BULLET OPERATOR: try adding one of: tai-tham, math, symbols, yi</li>
+<li>U+2219 BULLET OPERATOR: try adding one of: symbols, tai-tham, yi, math</li>
 <li>U+223B HOMOTHETIC: try adding math</li>
 <li>U+223C TILDE OPERATOR: try adding math</li>
 <li>U+223D REVERSED TILDE: try adding math</li>
 <li>U+2241 NOT TILDE: try adding math</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: malayalam, tai-viet, mende-kikakui, coptic, balinese, osage, elbasan, tirhuta, limbu, math, khudawadi, kaithi, old-permic, sinhala, thaana, bengali, zanabazar-square, batak, gunjala-gondi, kharoshthi, telugu, oriya, music, lepcha, phags-pa, hanunoo, chakma, dogra, kannada, saurashtra, marchen, brahmi, cham, masaram-gondi, adlam, tagalog, caucasian-albanian, thai, hebrew, bassa-vah, newa, tibetan, takri, soyombo, devanagari, duployan, khmer, javanese, mongolian, manichaean, tai-tham, buginese, modi, syloti-nagri, gurmukhi, grantha, symbols, pahawh-hmong, tifinagh, nko, syriac, lao, mahajani, tamil, siddham, rejang, wancho, bhaiksuki, new-tai-lue, miao, tagbanwa, ahom, hanifi-rohingya, sharada, sundanese, warang-citi, buhid, psalter-pahlavi, meetei-mayek, yi, canadian-aboriginal, armenian, khojki, mandaic, sogdian, kayah-li, myanmar, gujarati, tai-le</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: kharoshthi, nko, music, marchen, tibetan, tai-viet, bengali, meetei-mayek, bassa-vah, osage, chakma, limbu, malayalam, warang-citi, hanifi-rohingya, sogdian, mahajani, coptic, devanagari, miao, sharada, javanese, canadian-aboriginal, tai-tham, kayah-li, yi, telugu, cham, zanabazar-square, takri, syriac, math, myanmar, khojki, caucasian-albanian, balinese, tai-le, mandaic, phags-pa, modi, wancho, masaram-gondi, manichaean, sundanese, grantha, buhid, thaana, oriya, gujarati, thai, symbols, brahmi, tagalog, khudawadi, armenian, kannada, soyombo, tirhuta, syloti-nagri, saurashtra, lepcha, old-permic, bhaiksuki, tamil, mende-kikakui, lao, mongolian, pahawh-hmong, hanunoo, rejang, duployan, tagbanwa, khmer, ahom, newa, gunjala-gondi, elbasan, buginese, hebrew, batak, adlam, kaithi, sinhala, tifinagh, gurmukhi, dogra, psalter-pahlavi, new-tai-lue, siddham</li>
 <li>U+2626 ORTHODOX CROSS: try adding symbols</li>
 <li>U+271A HEAVY GREEK CROSS: try adding symbols</li>
 <li>U+2720 MALTESE CROSS: try adding symbols</li>
@@ -1424,6 +1424,7 @@ definitions.</p>
 <li>U+EC4A : not included in any glyphset definition</li>
 <li>U+EC4B : not included in any glyphset definition</li>
 <li>U+EC50 : not included in any glyphset definition</li>
+<li>U+ED17 : not included in any glyphset definition</li>
 <li>U+F4E0 : not included in any glyphset definition</li>
 <li>U+F4E1 : not included in any glyphset definition</li>
 <li>U+F4E2 : not included in any glyphset definition</li>
@@ -1439,11 +1440,11 @@ definitions.</p>
 <li>U+F4F2 : not included in any glyphset definition</li>
 <li>U+F4F3 : not included in any glyphset definition</li>
 <li>U+F4FD : not included in any glyphset definition</li>
-<li>U+FE00 VARIATION SELECTOR-1: try adding one of: manichaean, phags-pa, yi</li>
+<li>U+FE00 VARIATION SELECTOR-1: try adding one of: manichaean, yi, phags-pa</li>
 <li>U+FE01 VARIATION SELECTOR-2: not included in any glyphset definition</li>
 <li>U+FE02 VARIATION SELECTOR-3: not included in any glyphset definition</li>
 <li>U+FE03 VARIATION SELECTOR-4: not included in any glyphset definition</li>
-<li>U+FE26 COMBINING CONJOINING MACRON: try adding one of: coptic, caucasian-albanian</li>
+<li>U+FE26 COMBINING CONJOINING MACRON: try adding one of: caucasian-albanian, coptic</li>
 <li>U+1F540 CIRCLED CROSS POMMEE: try adding symbols</li>
 <li>U+1F541 CROSS POMMEE WITH HALF-CIRCLE BELOW: try adding symbols</li>
 <li>U+1F542 CROSS POMMEE: try adding symbols</li>
@@ -1539,7 +1540,7 @@ definitions.</p>
 <td align="left"></td>
 </tr>
 <tr>
-<td align="left">The following base characters are missing from the font: Ꙃ, Ҁ, ҁ, ꙃ</td>
+<td align="left">The following base characters are missing from the font: Ҁ, Ꙃ, ҁ, ꙃ</td>
 <td align="left">cu_Cyrl (Church Slavic)</td>
 </tr>
 </tbody>
