--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -1280,9 +1280,9 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
-<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: cherokee, tifinagh, math, coptic</li>
+<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: cherokee, math, coptic, tifinagh</li>
 <li>U+0306 COMBINING BREVE: try adding one of: old-permic, tifinagh</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: tai-le, tifinagh, todhri, syriac, old-permic, hebrew, canadian-aboriginal, duployan, malayalam, math, coptic</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: hebrew, malayalam, old-permic, tai-le, canadian-aboriginal, syriac, todhri, duployan, coptic, tifinagh, math</li>
 <li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: cherokee, osage</li>
 <li>U+030F COMBINING DOUBLE GRAVE ACCENT: not included in any glyphset definition</li>
 <li>U+0311 COMBINING INVERTED BREVE: try adding one of: todhri, coptic</li>
@@ -1301,13 +1301,13 @@ definitions.</p>
 <li>U+2006 SIX-PER-EM SPACE: try adding symbols2</li>
 <li>U+2008 PUNCTUATION SPACE: try adding symbols2</li>
 <li>U+200A HAIR SPACE: try adding symbols2</li>
-<li>U+200C ZERO WIDTH NON-JOINER: try adding one of: manichaean, sundanese, grantha, yi, mongolian, telugu, pahawh-hmong, kharoshthi, hanunoo, masaram-gondi, buhid, nko, rejang, thaana, duployan, tagbanwa, cham, khmer, tibetan, tai-viet, arabic, oriya, bengali, meetei-mayek, zanabazar-square, gujarati, takri, thai, brahmi, chakma, hatran, limbu, malayalam, avestan, khudawadi, syriac, tagalog, myanmar, hanifi-rohingya, khojki, sogdian, warang-citi, newa, kannada, gunjala-gondi, lao, hebrew, buginese, sinhala, batak, kaithi, tirhuta, balinese, mahajani, tai-le, devanagari, mandaic, tifinagh, phags-pa, syloti-nagri, gurmukhi, sharada, tai-tham, dogra, saurashtra, javanese, lepcha, psalter-pahlavi, modi, new-tai-lue, bhaiksuki, tamil, siddham, kayah-li</li>
-<li>U+200D ZERO WIDTH JOINER: try adding one of: manichaean, sundanese, grantha, yi, mongolian, telugu, pahawh-hmong, kharoshthi, hanunoo, masaram-gondi, buhid, nko, rejang, thaana, duployan, tagbanwa, cham, khmer, tibetan, tai-viet, arabic, oriya, bengali, meetei-mayek, zanabazar-square, gujarati, takri, thai, brahmi, chakma, limbu, malayalam, syriac, avestan, khudawadi, tagalog, warang-citi, myanmar, hanifi-rohingya, khojki, sogdian, newa, kannada, gunjala-gondi, lao, hebrew, buginese, sinhala, batak, kaithi, tirhuta, old-hungarian, balinese, mahajani, tai-le, devanagari, mandaic, tifinagh, phags-pa, syloti-nagri, gurmukhi, sharada, tai-tham, dogra, saurashtra, javanese, lepcha, psalter-pahlavi, modi, new-tai-lue, bhaiksuki, tamil, siddham, kayah-li</li>
-<li>U+200E LEFT-TO-RIGHT MARK: try adding one of: phags-pa, arabic, hebrew, nko, thaana, syriac</li>
-<li>U+200F RIGHT-TO-LEFT MARK: try adding one of: phags-pa, hebrew, nko, thaana, syriac</li>
-<li>U+2011 NON-BREAKING HYPHEN: try adding one of: arabic, yi, syloti-nagri</li>
+<li>U+200C ZERO WIDTH NON-JOINER: try adding one of: tibetan, malayalam, sogdian, tai-le, dogra, yi, limbu, nko, grantha, pahawh-hmong, balinese, meetei-mayek, tagbanwa, gujarati, lepcha, chakma, mandaic, devanagari, hatran, arabic, rejang, syriac, thaana, avestan, cham, hanunoo, tirhuta, warang-citi, tagalog, kaithi, newa, telugu, thai, modi, khojki, myanmar, javanese, zanabazar-square, kannada, bengali, brahmi, buginese, gunjala-gondi, siddham, khmer, tai-tham, tifinagh, tamil, manichaean, phags-pa, psalter-pahlavi, batak, mongolian, sharada, khudawadi, sinhala, sundanese, kayah-li, hebrew, hanifi-rohingya, syloti-nagri, masaram-gondi, saurashtra, bhaiksuki, new-tai-lue, duployan, kharoshthi, oriya, gurmukhi, mahajani, lao, tai-viet, takri, buhid</li>
+<li>U+200D ZERO WIDTH JOINER: try adding one of: tibetan, malayalam, sogdian, tai-le, dogra, yi, limbu, nko, grantha, pahawh-hmong, balinese, meetei-mayek, tagbanwa, gujarati, lepcha, chakma, mandaic, devanagari, arabic, rejang, old-hungarian, syriac, avestan, cham, hanunoo, thaana, tirhuta, tagalog, kaithi, newa, telugu, thai, warang-citi, modi, khojki, myanmar, javanese, zanabazar-square, kannada, bengali, brahmi, buginese, gunjala-gondi, siddham, khmer, tai-tham, tifinagh, tamil, manichaean, phags-pa, psalter-pahlavi, batak, mongolian, sharada, khudawadi, sinhala, sundanese, kayah-li, hebrew, hanifi-rohingya, syloti-nagri, masaram-gondi, saurashtra, bhaiksuki, new-tai-lue, duployan, kharoshthi, oriya, gurmukhi, mahajani, lao, tai-viet, takri, buhid</li>
+<li>U+200E LEFT-TO-RIGHT MARK: try adding one of: hebrew, syriac, arabic, thaana, nko, phags-pa</li>
+<li>U+200F RIGHT-TO-LEFT MARK: try adding one of: hebrew, syriac, thaana, nko, phags-pa</li>
+<li>U+2011 NON-BREAKING HYPHEN: try adding one of: arabic, syloti-nagri, yi</li>
 <li>U+2027 HYPHENATION POINT: not included in any glyphset definition</li>
-<li>U+202F NARROW NO-BREAK SPACE: try adding one of: yi, phags-pa, mongolian</li>
+<li>U+202F NARROW NO-BREAK SPACE: try adding one of: mongolian, phags-pa, yi</li>
 <li>U+203B REFERENCE MARK: not included in any glyphset definition</li>
 <li>U+2052 COMMERCIAL MINUS SIGN: not included in any glyphset definition</li>
 <li>U+2053 SWUNG DASH: try adding coptic</li>
@@ -1315,17 +1315,17 @@ definitions.</p>
 <li>U+2058 FOUR DOT PUNCTUATION: try adding coptic</li>
 <li>U+2059 FIVE DOT PUNCTUATION: try adding coptic</li>
 <li>U+205C DOTTED CROSS: not included in any glyphset definition</li>
-<li>U+205D TRICOLON: try adding one of: old-hungarian, meroitic, carian, meroitic-hieroglyphs</li>
+<li>U+205D TRICOLON: try adding one of: meroitic-hieroglyphs, meroitic, old-hungarian, carian</li>
 <li>U+205E VERTICAL FOUR DOTS: try adding old-hungarian</li>
 <li>U+20DD COMBINING ENCLOSING CIRCLE: try adding symbols</li>
 <li>U+2213 MINUS-OR-PLUS SIGN: try adding math</li>
 <li>U+2214 DOT PLUS: try adding math</li>
-<li>U+2219 BULLET OPERATOR: try adding one of: symbols, tai-tham, yi, math</li>
+<li>U+2219 BULLET OPERATOR: try adding one of: math, tai-tham, symbols, yi</li>
 <li>U+223B HOMOTHETIC: try adding math</li>
 <li>U+223C TILDE OPERATOR: try adding math</li>
 <li>U+223D REVERSED TILDE: try adding math</li>
 <li>U+2241 NOT TILDE: try adding math</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: kharoshthi, nko, music, marchen, tibetan, tai-viet, bengali, meetei-mayek, bassa-vah, osage, chakma, limbu, malayalam, warang-citi, hanifi-rohingya, sogdian, mahajani, coptic, devanagari, miao, sharada, javanese, canadian-aboriginal, tai-tham, kayah-li, yi, telugu, cham, zanabazar-square, takri, syriac, math, myanmar, khojki, caucasian-albanian, balinese, tai-le, mandaic, phags-pa, modi, wancho, masaram-gondi, manichaean, sundanese, grantha, buhid, thaana, oriya, gujarati, thai, symbols, brahmi, tagalog, khudawadi, armenian, kannada, soyombo, tirhuta, syloti-nagri, saurashtra, lepcha, old-permic, bhaiksuki, tamil, mende-kikakui, lao, mongolian, pahawh-hmong, hanunoo, rejang, duployan, tagbanwa, khmer, ahom, newa, gunjala-gondi, elbasan, buginese, hebrew, batak, adlam, kaithi, sinhala, tifinagh, gurmukhi, dogra, psalter-pahlavi, new-tai-lue, siddham</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: tibetan, bassa-vah, gujarati, adlam, tagalog, kaithi, newa, telugu, myanmar, marchen, miao, siddham, gunjala-gondi, khmer, sundanese, batak, elbasan, duployan, oriya, wancho, malayalam, osage, sogdian, limbu, nko, grantha, mende-kikakui, meetei-mayek, chakma, mandaic, devanagari, syriac, tirhuta, thai, javanese, zanabazar-square, buginese, tai-tham, sharada, psalter-pahlavi, mongolian, sinhala, hebrew, saurashtra, new-tai-lue, takri, caucasian-albanian, tai-le, ahom, yi, balinese, rejang, thaana, cham, hanunoo, khojki, bengali, brahmi, tamil, phags-pa, khudawadi, bhaiksuki, gurmukhi, lao, buhid, dogra, soyombo, pahawh-hmong, tagbanwa, lepcha, warang-citi, modi, kannada, old-permic, tifinagh, manichaean, math, kayah-li, hanifi-rohingya, syloti-nagri, masaram-gondi, canadian-aboriginal, coptic, kharoshthi, music, armenian, mahajani, tai-viet, symbols</li>
 <li>U+2626 ORTHODOX CROSS: try adding symbols</li>
 <li>U+271A HEAVY GREEK CROSS: try adding symbols</li>
 <li>U+2720 MALTESE CROSS: try adding symbols</li>
@@ -1440,7 +1440,7 @@ definitions.</p>
 <li>U+F4F2 : not included in any glyphset definition</li>
 <li>U+F4F3 : not included in any glyphset definition</li>
 <li>U+F4FD : not included in any glyphset definition</li>
-<li>U+FE00 VARIATION SELECTOR-1: try adding one of: manichaean, yi, phags-pa</li>
+<li>U+FE00 VARIATION SELECTOR-1: try adding one of: manichaean, phags-pa, yi</li>
 <li>U+FE01 VARIATION SELECTOR-2: not included in any glyphset definition</li>
 <li>U+FE02 VARIATION SELECTOR-3: not included in any glyphset definition</li>
 <li>U+FE03 VARIATION SELECTOR-4: not included in any glyphset definition</li>
@@ -1540,7 +1540,7 @@ definitions.</p>
 <td align="left"></td>
 </tr>
 <tr>
-<td align="left">The following base characters are missing from the font: Ҁ, Ꙃ, ҁ, ꙃ</td>
+<td align="left">The following base characters are missing from the font: Ꙃ, ҁ, Ҁ, ꙃ</td>
 <td align="left">cu_Cyrl (Church Slavic)</td>
 </tr>
 </tbody>
